--- a/app/src/main/res/layout/fragment_section2.xml
+++ b/app/src/main/res/layout/fragment_section2.xml
@@ -55,4 +55,21 @@
                 android:text="Upload" />
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/textViewTumbal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linearLayout"
+            android:layout_centerHorizontal="true"
+            android:visibility="invisible"/>
+
+        <TextView
+            android:id="@+id/textViewKoneksi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageView"
+            android:layout_centerHorizontal="true"
+            />
+
     </RelativeLayout>
