--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -10,64 +11,101 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 tools:context="id.sch.smktelkom_mlg.project2.xirpl61921272934.mokletstory.MainActivity">
 
+    <TextView
+        android:id="@+id/textViewWelcome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="85dp"
+        android:padding="4dp"
+        android:text="Register Account"
+        android:textAlignment="center"
+        android:textSize="40dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_marginTop="45dp"
+        android:orientation="horizontal">
 
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="User Registration"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+        <ImageView
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:padding="5dp"
+            app:srcCompat="@drawable/ic_account_box_black_24dp"/>
 
         <EditText
             android:id="@+id/editTextUsername"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:hint="Enter Username"
-            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
+            android:layout_height="43dp"
+            android:layout_marginLeft="10dp"
+            android:ems="10"
+            android:hint="Masukkan Username"
+            android:inputType="textPersonName"
+            android:padding="11dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:padding="5dp"
+            app:srcCompat="@drawable/ic_email_black_24dp"/>
 
         <EditText
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:hint="Enter email"
+            android:layout_height="43dp"
+            android:layout_marginLeft="10dp"
+            android:ems="10"
+            android:hint="Masukkan Email"
             android:inputType="textEmailAddress"
-            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
+            android:padding="11dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:padding="5dp"
+            app:srcCompat="@drawable/ic_lock_outline_black_24dp" />
 
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:hint="Enter password"
-            android:inputType="textPassword"
-            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
-
-        <Button
-            android:id="@+id/buttonSignup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:text="Sign up" />
-
-        <TextView
-            android:id="@+id/textViewSignin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:text="Already Registered? Signin Here"
-            android:textAlignment="center" />
+            android:layout_height="43dp"
+            android:layout_marginLeft="10dp"
+            android:ems="10"
+            android:padding="11dp"
+            android:hint="Masukkan Password"
+            android:inputType="textPassword"/>
 
     </LinearLayout>
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/buttonSignup"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginTop="7dp"
+        android:text="Daftar !" />
+
+    <TextView
+        android:id="@+id/textViewSignin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="Sudah punya akun? Login disini"
+        android:textAlignment="center"/>
+
+</LinearLayout>
