--- a/app/src/main/res/layout/fragment_section2.xml
+++ b/app/src/main/res/layout/fragment_section2.xml
@@ -39,7 +39,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/linearLayout" />
+            android:layout_below="@+id/linearLayout"
+            android:src="@drawable/camera"/>
 
         <LinearLayout
             android:layout_width="match_parent"
