--- a/app/src/main/res/layout/layout_images.xml
+++ b/app/src/main/res/layout/layout_images.xml
@@ -16,18 +16,38 @@
             android:minHeight="100dp">
 
             <TextView
+                android:id="@+id/textViewKiriman"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Kiriman dari : "
+                android:textSize="20sp"/>
+
+            <TextView
                 android:id="@+id/textViewName"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name"
-                android:textAlignment="center"
-                android:textSize="24sp"/>
+                android:textSize="20sp"
+                android:layout_marginLeft="133dp"
+                android:layout_marginStart="133dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"/>
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/textViewName" />
+                android:layout_below="@id/textViewName"/>
+
+            <TextView
+                android:id="@+id/textViewCaption"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imageView"
+                android:text="Caption"
+                android:textAlignment="center"
+                android:textSize="18sp"/>
 
         </RelativeLayout>
 
