--- a/app/src/main/res/layout/layout_images.xml
+++ b/app/src/main/res/layout/layout_images.xml
@@ -20,19 +20,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Kiriman dari : "
-                android:textSize="20sp"/>
+                android:textSize="18sp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="19dp"
+                android:layout_marginStart="19dp"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp"/>
 
             <TextView
                 android:id="@+id/textViewName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name"
-                android:textSize="20sp"
-                android:layout_marginLeft="133dp"
-                android:layout_marginStart="133dp"
+                android:textSize="18sp"
+                android:layout_marginLeft="136dp"
+                android:layout_marginStart="136dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_alignParentStart="true"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp"/>
 
             <ImageView
                 android:id="@+id/imageView"
@@ -47,7 +56,9 @@
                 android:layout_below="@id/imageView"
                 android:text="Caption"
                 android:textAlignment="center"
-                android:textSize="18sp"/>
+                android:textSize="18sp"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp"/>
 
         </RelativeLayout>
 
