Update Login,Register,Upload,Profile Layout

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,111 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="id.sch.smktelkom_mlg.project2.xirpl61921272934.mokletstory.MainActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@drawable/bg1"
+              android:orientation="vertical"
+              android:paddingBottom="@dimen/activity_vertical_margin"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin"
+              tools:context="id.sch.smktelkom_mlg.project2.xirpl61921272934.mokletstory.MainActivity">
 
-    <TextView
-        android:id="@+id/textViewWelcome"
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="85dp"
         android:padding="4dp"
-        android:text="Register Account"
         android:textAlignment="center"
-        android:textSize="40dp"/>
+        app:srcCompat="@drawable/octicons"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp"
+        android:id="@+id/imageView4"
+        android:layout_above="@+id/linearLayoutx"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/linearLayoutx"
+        android:layout_above="@+id/linearLayouty"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <ImageView
+            android:id="@+id/imageView3"
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:padding="5dp"
-            app:srcCompat="@drawable/ic_account_box_black_24dp"/>
+            app:srcCompat="@drawable/ic_account_box_white_24dp"/>
 
         <EditText
             android:id="@+id/editTextUsername"
             android:layout_width="match_parent"
             android:layout_height="43dp"
             android:layout_marginLeft="10dp"
+            android:backgroundTint="@color/colorWhite"
             android:ems="10"
-            android:hint="Masukkan Username"
+            android:hint="Username"
             android:inputType="textPersonName"
-            android:padding="11dp" />
+            android:padding="11dp"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorWhite"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/linearLayouty"
+        android:layout_alignBottom="@+id/linearLayoutz"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="40dp">
 
         <ImageView
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:padding="5dp"
-            app:srcCompat="@drawable/ic_email_black_24dp"/>
+            app:srcCompat="@drawable/ic_email_white_24dp"/>
 
         <EditText
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="43dp"
             android:layout_marginLeft="10dp"
+            android:backgroundTint="@color/colorWhite"
             android:ems="10"
-            android:hint="Masukkan Email"
+            android:hint="Email"
             android:inputType="textEmailAddress"
-            android:padding="11dp"/>
+            android:padding="11dp"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorWhite"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/linearLayoutz"
+        android:layout_alignBottom="@+id/buttonSignup"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="44dp">
 
         <ImageView
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:padding="5dp"
-            app:srcCompat="@drawable/ic_lock_outline_black_24dp" />
+            app:srcCompat="@drawable/ic_lock_white_24dp"/>
 
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="43dp"
             android:layout_marginLeft="10dp"
+            android:backgroundTint="@color/colorWhite"
             android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
             android:padding="11dp"
-            android:hint="Masukkan Password"
-            android:inputType="textPassword"/>
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorWhite"/>
 
     </LinearLayout>
 
     <Button
         android:id="@+id/buttonSignup"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:layout_marginTop="7dp"
-        android:text="Daftar !" />
+        android:text="Daftar !"
+        android:layout_marginBottom="49dp"
+        android:layout_above="@+id/linearLayout9"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
-    <TextView
-        android:id="@+id/textViewSignin"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="Sudah punya akun? Login disini"
-        android:textAlignment="center"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@color/cardview_light_background"
+        android:id="@+id/linearLayout9">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/textViewSignin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:padding="10dp"
+            android:text="Sudah punya akun? Login disini"
+            android:textAlignment="center"
+            android:textColor="@color/colorBlack"/>
+    </LinearLayout>
+</RelativeLayout>
