--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="colorPrimary">#b91d47</color>
     <color name="colorPrimaryDark">#8c8587</color>
-    <color name="colorAccent">#FF4081</color>q
+    <color name="colorAccent">#b11c26</color>
+    <color name="colorWhite">#dedede</color>
+    <color name="colorBlack">#000000</color>
 </resources>
