--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,87 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:id="@+id/activity_login"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@drawable/bg1"
               android:orientation="vertical"
               android:paddingBottom="@dimen/activity_vertical_margin"
               android:paddingLeft="@dimen/activity_horizontal_margin"
               android:paddingRight="@dimen/activity_horizontal_margin"
               android:paddingTop="@dimen/activity_vertical_margin"
               android:weightSum="1"
-                tools:context=".LoginActivity">
-    <TextView
-        android:id="@+id/textViewLogin"
+              tools:context=".LoginActivity">
+
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="45dp"
-        android:layout_marginTop="100dp"
         android:padding="4dp"
-        android:text="Login"
         android:textAlignment="center"
-        android:textSize="40dp" />
+        app:srcCompat="@drawable/octicons"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/imageView4"
+        android:layout_above="@+id/linearLayouta"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/linearLayouta"
+        android:layout_above="@+id/linearLayoutb"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <ImageView
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:padding="5dp"
-            app:srcCompat="@drawable/ic_email_black_24dp"/>
+            app:srcCompat="@drawable/ic_email_white_24dp"/>
 
         <EditText
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="43dp"
             android:layout_marginLeft="10dp"
+            android:backgroundTint="@color/colorWhite"
+            android:textColor="@color/colorWhite"
             android:ems="10"
-            android:hint="Masukkan Email"
+            android:hint="Email"
             android:inputType="textEmailAddress"
-            android:padding="11dp" />
+            android:padding="11dp"
+            android:textColorHint="@color/colorWhite"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/linearLayoutb"
+        android:layout_alignBottom="@+id/buttonSignIn"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="44dp">
 
         <ImageView
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:padding="5dp"
-            app:srcCompat="@drawable/ic_lock_outline_black_24dp" />
+            app:srcCompat="@drawable/ic_lock_white_24dp"/>
 
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="43dp"
             android:layout_marginLeft="10dp"
+            android:backgroundTint="@color/colorWhite"
+            android:textColor="@color/colorWhite"
+            android:hint="Password"
+            android:inputType="textPassword"
             android:padding="11dp"
-            android:hint="Masukkan Password"
-            android:inputType="textPassword"/>
+            android:textColorHint="@color/colorWhite"/>
 
     </LinearLayout>
 
     <Button
         android:id="@+id/buttonSignIn"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="7dp"
-        android:text="Login" />
-
-    <TextView
-        android:id="@+id/textViewSignUp"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="Belum punya akun? Daftar disini"
-        android:textAlignment="center" />
+        android:text="Login"
+        android:layout_marginBottom="53dp"
+        android:layout_above="@+id/linearLayout3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@color/cardview_light_background"
+        android:id="@+id/linearLayout3">
+
+        <TextView
+            android:id="@+id/textViewSignUp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Belum punya akun? Daftar disini"
+            android:textAlignment="center"
+            android:textColor="@color/colorBlack"/>
+    </LinearLayout>
+</RelativeLayout>
