--- a/app/src/main/res/layout/fragment_section2.xml
+++ b/app/src/main/res/layout/fragment_section2.xml
@@ -36,13 +36,15 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/linearLayout"
-        android:src="@drawable/camera"/>
+        android:src="@drawable/camera"
+        android:layout_above="@+id/linearLayout2"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/linearLayout2">
 
         <Button
             android:id="@+id/buttonUpload"
@@ -69,16 +71,5 @@
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
         />
-
-    <Button
-        android:id="@+id/buttonChoose"
-        style="@android:style/Widget.Holo.Light.Button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Pick Image"
-        android:layout_below="@+id/linearLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
