--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,117 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:id="@+id/activity_login"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@drawable/bg1"
-              android:orientation="vertical"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
-              android:weightSum="1"
-              tools:context=".LoginActivity">
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <ImageView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="4dp"
-        android:textAlignment="center"
-        app:srcCompat="@drawable/octicons"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
-        android:id="@+id/imageView4"
-        android:layout_above="@+id/linearLayouta"/>
+        android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/linearLayouta"
-        android:layout_above="@+id/linearLayoutb"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-        <ImageView
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:padding="5dp"
-            app:srcCompat="@drawable/ic_email_white_24dp"/>
-
-        <EditText
-            android:id="@+id/editTextEmail"
+        <RelativeLayout
+            android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="43dp"
-            android:layout_marginLeft="10dp"
-            android:backgroundTint="@color/colorWhite"
-            android:textColor="@color/colorWhite"
-            android:ems="10"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:padding="11dp"
-            android:textColorHint="@color/colorWhite"/>
+            android:layout_height="match_parent"
+            android:background="@drawable/bg1"
+            android:layout_above="@+id/textViewSignUp">
 
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/linearLayoutb"
-        android:layout_alignBottom="@+id/buttonSignIn"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="44dp">
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/linearLayouta"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="50dp"
+                android:padding="4dp"
+                android:textAlignment="center"
+                app:srcCompat="@drawable/octicons"/>
 
-        <ImageView
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:padding="5dp"
-            app:srcCompat="@drawable/ic_lock_white_24dp"/>
+            <LinearLayout
+                android:id="@+id/linearLayouta"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/linearLayoutb"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/editTextPassword"
-            android:layout_width="match_parent"
-            android:layout_height="43dp"
-            android:layout_marginLeft="10dp"
-            android:backgroundTint="@color/colorWhite"
-            android:textColor="@color/colorWhite"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:padding="11dp"
-            android:textColorHint="@color/colorWhite"/>
+                <ImageView
+                    android:layout_width="44dp"
+                    android:layout_height="44dp"
+                    android:padding="5dp"
+                    app:srcCompat="@drawable/ic_email_white_24dp"/>
 
-    </LinearLayout>
+                <EditText
+                    android:id="@+id/editTextEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="43dp"
+                    android:layout_marginLeft="10dp"
+                    android:backgroundTint="@color/colorWhite"
+                    android:ems="10"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:padding="11dp"
+                    android:textColor="@color/colorWhite"
+                    android:textColorHint="@color/colorWhite"/>
 
-    <Button
-        android:id="@+id/buttonSignIn"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:layout_marginBottom="53dp"
-        android:layout_above="@+id/linearLayout3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+            </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="@color/cardview_light_background"
-        android:id="@+id/linearLayout3">
+            <LinearLayout
+                android:id="@+id/linearLayoutb"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_above="@+id/buttonSignIn"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true">
+
+                <ImageView
+                    android:layout_width="44dp"
+                    android:layout_height="44dp"
+                    android:padding="5dp"
+                    app:srcCompat="@drawable/ic_lock_white_24dp"/>
+
+                <EditText
+                    android:id="@+id/editTextPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="43dp"
+                    android:layout_marginLeft="10dp"
+                    android:backgroundTint="@color/colorWhite"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:padding="11dp"
+                    android:textColor="@color/colorWhite"
+                    android:textColorHint="@color/colorWhite"/>
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/buttonSignIn"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="200dp"
+                android:layout_height="45dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                android:text="Login"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"/>
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/textViewSignUp"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="Belum punya akun? Daftar disini"
-            android:textAlignment="center"
-            android:textColor="@color/colorBlack"/>
-    </LinearLayout>
-</RelativeLayout>
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
+            android:text="Belum punya akun? Daftar disini"/>
+
+    </RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
